[tool.poetry]
name = "readthedocs-test"
version = "0.1.0"
description = ""
authors = ["efredriksson <fredrikssonemil@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
